react-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-nginx-service
  labels:
    service: react-nginx-service
spec:
  selector:
    app: react-nginx
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
