ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-nginx-ingress
spec:
  rules:
  - host: ashton.tk
    http:
      paths:
      - path: "/"
        backend:
          serviceName: react-nginx-service
          servicePort: 80
  # - host: v2.example.com
  #   http:
  #     paths:
  #     - path: "/"
  #       backend:
  #         serviceName: nginx-v2
  #         servicePort: 80
